--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "keyfun",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "bcrypt": "^5.1.1",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "faker": "^6.6.6",
+    "mongoose": "^8.5.0",
     "multer": "^1.4.5-lts.1"
   }
 }
