--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-session": "^1.18.0",
     "faker": "^6.6.6",
     "mongoose": "^8.5.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
