--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@faker-js/faker": "^8.4.1",
     "@google/generative-ai": "^0.15.0",
     "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
@@ -22,6 +24,7 @@
     "mongoose": "^8.5.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   }
 }
