--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "keyfun",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +13,7 @@
     "@faker-js/faker": "^8.4.1",
     "@google/generative-ai": "^0.15.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.3.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
