--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,7 @@
     "@faker-js/faker": "^8.4.1",
     "@google/generative-ai": "^0.15.0",
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.3.1",
+    "cloudinary": "^1.25.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.4.5",
@@ -23,6 +24,7 @@
     "faker": "^6.6.6",
     "mongoose": "^8.5.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0"
