--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@google/generative-ai": "^0.15.0",
+    "@joegesualdo/get-youtube-subtitles-node": "^0.1.0",
+    "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.25.0",
     "connect-flash": "^0.1.1",
@@ -27,6 +29,12 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.88.2",
+    "streamifier": "^0.1.1",
+    "xml2js": "^0.6.2",
+    "youtube-captions-scraper": "^2.0.3",
+    "yt-dlp-exec": "^1.0.2",
+    "ytdl-core": "^4.11.5"
   }
 }
