--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@ffmpeg/core": "^0.12.6",
+    "@ffmpeg/ffmpeg": "^0.12.10",
     "@google/generative-ai": "^0.15.0",
     "@joegesualdo/get-youtube-subtitles-node": "^0.1.0",
     "axios": "^1.7.3",
@@ -31,7 +33,11 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "request": "^2.88.2",
+    "srt-to-vtt": "^1.1.3",
+    "srt-webvtt": "^2.0.0",
+    "srt2vtt": "^1.3.1",
     "streamifier": "^0.1.1",
+    "subtitle": "^4.2.1",
     "xml2js": "^0.6.2",
     "youtube-captions-scraper": "^2.0.3",
     "yt-dlp-exec": "^1.0.2",
