--- a/package.json
+++ b/package.json
@@ -1,46 +1,46 @@
 {
-  "name": "keyfun",
-  "version": "1.0.0",
-  "main": "src/server.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@faker-js/faker": "^8.4.1",
-    "@ffmpeg/core": "^0.12.6",
-    "@ffmpeg/ffmpeg": "^0.12.10",
-    "@google/generative-ai": "^0.15.0",
-    "@joegesualdo/get-youtube-subtitles-node": "^0.1.0",
-    "axios": "^1.7.3",
-    "bcrypt": "^5.1.1",
-    "cloudinary": "^1.25.0",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^5.1.0",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "express-session": "^1.18.0",
-    "faker": "^6.6.6",
-    "mongoose": "^8.5.0",
-    "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-local": "^1.0.0",
-    "request": "^2.88.2",
-    "srt-to-vtt": "^1.1.3",
-    "srt-webvtt": "^2.0.0",
-    "srt2vtt": "^1.3.1",
-    "streamifier": "^0.1.1",
-    "subtitle": "^4.2.1",
-    "xml2js": "^0.6.2",
-    "youtube-captions-scraper": "^2.0.3",
-    "yt-dlp-exec": "^1.0.2",
-    "ytdl-core": "^4.11.5"
-  }
+	"name": "keyfun",
+	"version": "1.0.0",
+	"main": "src/server.js",
+	"scripts": {
+		"start": "node src/app.js",
+		"dev": "nodemon src/app.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"@faker-js/faker": "^8.4.1",
+		"@ffmpeg/core": "^0.12.6",
+		"@ffmpeg/ffmpeg": "^0.12.10",
+		"@google/generative-ai": "^0.15.0",
+		"@joegesualdo/get-youtube-subtitles-node": "^0.1.0",
+		"axios": "^1.7.3",
+		"bcrypt": "^5.1.1",
+		"cloudinary": "^1.25.0",
+		"connect-flash": "^0.1.1",
+		"connect-mongo": "^5.1.0",
+		"dotenv": "^16.4.5",
+		"ejs": "^3.1.10",
+		"express": "^4.19.2",
+		"express-session": "^1.18.0",
+		"faker": "^6.6.6",
+		"mongoose": "^8.5.0",
+		"multer": "^1.4.5-lts.1",
+		"multer-storage-cloudinary": "^4.0.0",
+		"passport": "^0.7.0",
+		"passport-google-oauth20": "^2.0.0",
+		"passport-local": "^1.0.0",
+		"request": "^2.88.2",
+		"srt-to-vtt": "^1.1.3",
+		"srt-webvtt": "^2.0.0",
+		"srt2vtt": "^1.3.1",
+		"streamifier": "^0.1.1",
+		"subtitle": "^4.2.1",
+		"xml2js": "^0.6.2",
+		"youtube-captions-scraper": "^2.0.3",
+		"yt-dlp-exec": "^1.0.2",
+		"ytdl-core": "^4.11.5"
+	}
 }
